--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
   "require": {
     "yiisoft/yii2": "^2.0.13.1",
     "phpunit/phpunit": "^6.5 || ^7 || ^8",
+    "yidas/yii2-composer-bower-skip": "~2.0.0",
     "php": "^7.1"
   }
 }
