--- a/composer.json
+++ b/composer.json
@@ -1,26 +1,26 @@
 {
-  "name": "kartavik/yii2-phpunit",
-  "license": "MIT",
-  "description": "Yii 2 PHPUnit compatibility layer and enhancements",
-  "type": "library",
-  "require-dev": {
-  },
-  "autoload": {
-    "psr-4": {
-      "yii\\phpunit\\": "src/"
+    "name": "kartavik/yii2-phpunit",
+    "license": "MIT",
+    "description": "Yii 2 PHPUnit compatibility layer and enhancements",
+    "type": "library",
+    "require-dev": {
+    },
+    "autoload": {
+        "psr-4": {
+            "yii\\phpunit\\": "src/"
+        }
+    },
+    "authors": [
+        {
+            "name": "Alexander Letnikow",
+            "email": "reclamme@gmail.com"
+        }
+    ],
+    "minimum-stability": "stable",
+    "require": {
+        "php": ">=7.1",
+        "yiisoft/yii2": "^2.0.13.1",
+        "phpunit/phpunit": "^6.5 || ^7 || ^8 || ^9.0",
+        "yidas/yii2-composer-bower-skip": "^2.0.0"
     }
-  },
-  "authors": [
-    {
-      "name": "Alexander Letnikow",
-      "email": "reclamme@gmail.com"
-    }
-  ],
-  "minimum-stability": "stable",
-  "require": {
-    "yiisoft/yii2": "^2.0.13.1",
-    "phpunit/phpunit": "^6.5 || ^7 || ^8",
-    "yidas/yii2-composer-bower-skip": "~2.0.0",
-    "php": "^7.1"
-  }
 }
